<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="325dp"
        android:layout_height="196dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/student"
        app:layout_constraintBottom_toTopOf="@+id/studentinfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/stu" />

    <TextView
        android:id="@+id/studentinfo"
        android:layout_width="103dp"
        android:layout_height="73dp"
        android:text="@string/st_text"
        app:layout_constraintBottom_toTopOf="@+id/grades"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/grades"
        android:layout_width="181dp"
        android:layout_height="58dp"
        android:layout_marginBottom="240dp"
        android:text="@string/grades"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cButton"
        android:layout_width="184dp"
        android:layout_height="64dp"
        android:layout_marginBottom="172dp"
        android:text="@string/coupons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>